platform/flux/platform/kubernetes-dashboard/kubernetes-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`kubernetes.tessaro.dino.home`)
      services:
        - name: kubernetes-dashboard
          port: 443
  tls:
    passthrough: true
