platform/flux/platform/kubernetes-dashboard/kubernetes-dashboard-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-dashboard-https-redirect
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`kubernetes.tessaro.dino.home`)
      middlewares:
        - name: kubernetes-dashboard-https-redirect
      services:
        - kind: TraefikService
          name: noop@internal
